tests/reference/asr-intrinsics_05-a2b71c6.stderr
semantic error: The kind of first argument of `ior` intrinsic must be the same as second argument
 --> tests/errors/intrinsics_05.f90:2:14
  |
2 |     print *, ior(1, 1_8)
  |              ^^^^^^^^^^^ 
